--- a/actividad_1.html
+++ b/actividad_1.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Actividad 1 | Patrones GRASP: Experto </title>
+<title>Actividad 1 | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,13 +19,14 @@
 <body class="exe-web-site" id="exe-node-15"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li><a href="contenido.html" class="daddy">Contenido</a>
    <ul class="other-section">
-      <li><a href="pregunta_clave.html" class="no-ch">Pregunta clave</a></li>
+      <li><a href="qu_es_un_evento.html" class="no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li><a href="observaciones.html" class="no-ch">Observaciones</a></li>
@@ -52,6 +53,98 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Actividad 1</h1></header>
+<article class="iDevice_wrapper MultichoiceIdevice em_iDevice em_iDevice_question" id="id15">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Pregunta de Elección Múltiple</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<section class="question">
+<form name="multi-choice-form-15_86" action="#" onsubmit="return false" class="activity-form">
+<h1 class="js-sr-av">Pregunta</h1>
+<div id="taquestion15_86" class="block question iDevice_content">
+<p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Haces parte de un proyecto para un software de arrendamiento de apartamentos, el dueño quiere un diseño simple con botones esenciales como listar apartamentos, listar disponibles y ocupados, también desea poder agregar y listar todos los clientes. Dada la situación el diagrama de clases que mejor muestra el uso de este patrón es:</span></p>
+</div>
+<section class="iDevice_answers">
+<h1 class="js-sr-av">Respuestas</h1>
+<section class="iDevice_answer">
+<p class="iDevice_answer-field js-required">
+<label for="i15_89" class="sr-av"><a href="#answer-15_89">Opción 1</a></label><input type="radio" name="option15_86" id="i15_89" class="exe-radio-option exe-radio-option-0-3-15_86-multi"/>
+</p>
+<div class="iDevice_answer-content" id="answer-15_89"><div id="taans15_89" class="block iDevice_content">
+<figure class="exe-figure exe-image position-center" style="width: 851px; text-align: center;">
+<div class="figcaption header"><strong>Opción A</strong></div>
+<img src="Opcion_A.png" alt="Diagrama de clases opción A" width="851" height="269" />
+<figcaption class="figcaption"><span class="title"><em>Diagrama de clases</em></span></figcaption>
+</figure>
+<p></p>
+</div>
+</div>
+</section>
+<section class="iDevice_answer">
+<p class="iDevice_answer-field js-required">
+<label for="i15_92" class="sr-av"><a href="#answer-15_92">Opción 2</a></label><input type="radio" name="option15_86" id="i15_92" class="exe-radio-option exe-radio-option-1-3-15_86-multi"/>
+</p>
+<div class="iDevice_answer-content" id="answer-15_92"><div id="taans15_92" class="block iDevice_content">
+<figure class="exe-figure exe-image position-center" style="width: 787px; text-align: center;">
+<div class="figcaption header"><strong>Opción B</strong></div>
+<img src="Opcion_B.png" alt="Diagrama de clases" width="787" height="277" />
+<figcaption class="figcaption"><span class="title"><em>Diagrama de clases</em></span></figcaption>
+</figure>
+<p></p>
+</div>
+</div>
+</section>
+<section class="iDevice_answer">
+<p class="iDevice_answer-field js-required">
+<label for="i15_290" class="sr-av"><a href="#answer-15_290">Opción 3</a></label><input type="radio" name="option15_86" id="i15_290" class="exe-radio-option exe-radio-option-2-3-15_86-multi"/>
+</p>
+<div class="iDevice_answer-content" id="answer-15_290"><div id="taans15_290" class="block iDevice_content">
+<p></p>
+<figure class="exe-figure exe-image position-center" style="width: 595px; text-align: center;">
+<div class="figcaption header"><strong>Opción C</strong></div>
+<img src="Opcion_C.png" alt="Diagrama de clases opción C" width="595" height="277" />
+<figcaption class="figcaption"><span class="title"><em>Diagrama de clases </em></span></figcaption>
+</figure>
+<p></p>
+</div>
+</div>
+</section>
+</section>
+<section class="iDevice_feedbacks js-feedback">
+<h1 class="js-sr-av">Retroalimentación</h1>
+<section id="sa0b15_86" class="feedback js-hidden">
+<div id="taf15_89" class=" iDevice_content">
+<h1><span style="font-size: 24pt; font-family: helvetica, arial, sans-serif; color: #339966;">Correcto</span></h1>
+<p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">En este diagrama se muestran dos controladores de casos de uso, con esto se mantiene una alta cohesión en los elementos y manteniendo su acoplamiento, permitiendo su reutilización.</span></p>
+</div>
+</section>
+<section id="sa1b15_86" class="feedback js-hidden">
+<div id="taf15_92" class=" iDevice_content">
+<h1><span style="font-size: 24pt; font-family: helvetica, arial, sans-serif; color: #ff0000;">Incorrecto</span></h1>
+<p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">En este diagrama se muestra un controlador de fachada encargado de gestionar todas las operaciones del proyecto, sobrecargando su función dificultando su lectura y reutilización.</span></p>
+</div>
+</section>
+<section id="sa2b15_86" class="feedback js-hidden">
+<div id="taf15_290" class=" iDevice_content">
+<h1><span style="font-size: 24pt; font-family: helvetica, arial, sans-serif; color: #ff0000;">Incorrecto</span></h1>
+<p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">En este diagrama no se utilizan controladores sino que la clase UI, se encarga de gestionar los eventos, rompiendo su cohesión, dificultando el mantenimiento del sistema.</span></p>
+</div>
+</section>
+</section>
+</form>
+<section class="iDevice_solution feedback js-hidden">
+<h1>Solución</h1>
+<ol>
+<li><a href="#answer-15_89">Opción correcta</a><span> (<a href="#sa0b15_86">Retroalimentación</a>)</span></li>
+<li><a href="#answer-15_92">Incorrecto</a><span> (<a href="#sa1b15_86">Retroalimentación</a>)</span></li>
+<li><a href="#answer-15_290">Incorrecto</a><span> (<a href="#sa2b15_86">Retroalimentación</a>)</span></li>
+</ol>
+</section>
+</section>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
