--- a/metadatos.html
+++ b/metadatos.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Metadatos | Patrones GRASP: Experto </title>
+<title>Metadatos | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,13 +19,14 @@
 <body class="exe-web-site" id="exe-node-18"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li><a href="contenido.html" class="daddy">Contenido</a>
    <ul class="other-section">
-      <li><a href="pregunta_clave.html" class="no-ch">Pregunta clave</a></li>
+      <li><a href="qu_es_un_evento.html" class="no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li><a href="observaciones.html" class="no-ch">Observaciones</a></li>
@@ -52,81 +53,81 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Metadatos</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id20">
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id17">
 <div class="iDevice emphasis1" >
 <header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle"> Estructura de información externa</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
-<div id="ta20_124_2" class="block iDevice_content">
+<div id="ta17_131_2" class="block iDevice_content">
 <div class="exe-text"><table border="1" style="width: 80%; border-color: #2566e8; margin-left: auto; margin-right: auto;">
 <tbody>
-<tr>
-<td style="text-align: center; width: 9.57702%;">
+<tr style="height: 53px;">
+<td style="height: 53px; width: 10.772%; text-align: center;">
 <p><span style="font-size: 18pt; font-family: helvetica, arial, sans-serif;"><b>Elemento</b></span></p>
 </td>
-<td style="text-align: center; width: 89.7845%;">
+<td style="height: 53px; width: 88.5099%; text-align: center;">
 <p><span style="font-size: 18pt; font-family: helvetica, arial, sans-serif;"><b>Descripción</b></span></p>
 </td>
 </tr>
-<tr>
-<td style="width: 9.57702%; text-align: center;">
+<tr style="height: 171px;">
+<td style="height: 171px; width: 10.772%; text-align: center;">
 <p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>General</b></span></p>
 </td>
-<td style="width: 89.7845%;">
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Título:</b><span style="font-weight: 400;"> Patrón experto.</span></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Descripción:</b><span style="font-weight: 400;"> Este objeto virtual busca brindar los conocimientos necesarios para el entendimiento y uso del patrón experto que hace parte de los patrones GRASP creados por Craig Larman.</span></span></p>
+<td style="height: 171px; width: 88.5099%;">
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Título:</b><span style="font-weight: 400;"> Controlador.</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Descripción:</b><span style="font-weight: 400;"> Este objeto virtual sirve para entender y aprender a aplicar el patrón Controlador, que hace parte de los patrones GRASP definidos por Craig Larman.</span></span></p>
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Idioma(s):</b><span style="font-weight: 400;"> español</span></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Palabras claves:</b><span style="font-weight: 400;"> GRASP, Objeto de Aprendizaje, experto, patrones de diseño.</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Palabras claves:</b><span style="font-weight: 400;"> GRASP, Objeto de Aprendizaje, controlador, patrones de diseño.</span></span></p>
 </td>
 </tr>
-<tr>
-<td style="width: 9.57702%; text-align: center;">
+<tr style="height: 171px;">
+<td style="height: 171px; width: 10.772%; text-align: center;">
 <p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Ciclo de Vida</b></span></p>
 </td>
-<td style="width: 89.7845%;">
+<td style="height: 171px; width: 88.5099%;">
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Autor(es):</b><span style="font-weight: 400;"> Marrugo Cantillo, Elio; Monroy Ríos, Martin.</span></span></p>
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Versión:</b><span style="font-weight: 400;"> 1.0</span></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Entidad:</b><span style="font-weight: 400;"> Universidad de Cartagena, programa Ingeniería de Sistemas.</span></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Fecha: </b><span style="font-weight: 400;">20/01/2021</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Entidad:</b><span style="font-weight: 400;"> Universidad de Cartagena, programa Ingeniería de Sistemas, Departamento de Ingeniería de Software.</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Fecha: </b><span style="font-weight: 400;">18/09/2022</span></span></p>
 </td>
 </tr>
-<tr>
-<td style="width: 9.57702%; text-align: center;">
+<tr style="height: 211px;">
+<td style="height: 211px; width: 10.772%; text-align: center;">
 <p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Educacional</b></span></p>
 </td>
-<td style="width: 89.7845%;">
+<td style="height: 211px; width: 88.5099%;">
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Tipo de interactividad:</b><span style="font-weight: 400;"> Combinado</span></span></p>
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Tipo de recurso de aprendizaje: </b><span style="font-weight: 400;">Unidad temática.</span></span></p>
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Nivel de interactividad:</b><span style="font-weight: 400;"> Pasivo</span></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Población objetivo:</b><span style="font-weight: 400;"> Estudiantes </span></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Contexto de aprendizaje:</b><span style="font-weight: 400;"> Educación superior, programa ingeniería de sistemas</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Población objetivo:</b><span style="font-weight: 400;"> Estudiantes</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Contexto de aprendizaje:</b><span style="font-weight: 400;"> Educación superior, programa Ingeniería de Sistemas, e ingeniería de software.</span></span></p>
 </td>
 </tr>
-<tr>
-<td style="width: 9.57702%; text-align: center;">
+<tr style="height: 132px;">
+<td style="height: 132px; width: 10.772%; text-align: center;">
 <p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Derechos</b></span></p>
 </td>
-<td style="width: 89.7845%;">
+<td style="height: 132px; width: 88.5099%;">
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Costo:</b><span style="font-weight: 400;"> Libre.</span></span></p>
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Derechos de autor y otras restricciones:</b></span></p>
 <p style="padding-left: 30px;"><span style="font-weight: 400; font-size: 14pt; font-family: helvetica, arial, sans-serif;">Licencia: Esta obra es publicada bajo la licencia Creative Commons</span></p>
 </td>
 </tr>
-<tr>
-<td style="width: 9.57702%; text-align: center;">
+<tr style="height: 79px;">
+<td style="height: 79px; width: 10.772%; text-align: center;">
 <p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Anotación</b></span></p>
 </td>
-<td style="width: 89.7845%;">
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Uso educativo: </b><span style="font-weight: 400;">Este Objeto de Aprendizaje puede ser utilizado por docente y estudiantes de educación superior principalmente ligados al campo de la ingeniería de sistemas en el proceso de enseñanza-aprendizaje del patrón experto.</span></span></p>
+<td style="height: 79px; width: 88.5099%;">
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Uso educativo:</b><span style="font-weight: 400;"> Este Objeto de Aprendizaje puede ser utilizado por docente y estudiantes de educación superior, principalmente vinculados al campo de la ingeniería de software,  en el proceso de enseñanza-aprendizaje del patrón “Controlador''.</span></span></p>
 </td>
 </tr>
-<tr>
-<td style="width: 9.57702%; text-align: center;">
-<p style="text-align: center;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Clasificación</b></span></p>
+<tr style="height: 92px;">
+<td style="height: 92px; width: 10.772%; text-align: center;">
+<p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Clasificación</b></span></p>
 </td>
-<td style="width: 89.7845%;">
+<td style="height: 92px; width: 88.5099%;">
 <p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Fuente de clasificación:</b></span></p>
-<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Ruta Taxonómica: </b><span style="font-weight: 400;">Ciencias de la computación,</span> <span style="font-weight: 400;">Ingeniería de software – ingeniería de sistemas, patrones de diseño</span></span></p>
+<p style="padding-left: 30px;"><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;"><b>Ruta Taxonómica: </b><span style="font-weight: 400;">Ciencias de la computación, Ingeniería de sistemas - Ingeniería de software, patrones de diseño</span></span></p>
 </td>
 </tr>
 </tbody>
