--- a/qu_es_un_evento.html
+++ b/qu_es_un_evento.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Pregunta clave | Patrones GRASP: Experto </title>
+<title>¿Qué es un evento? | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,13 +19,14 @@
 <body class="exe-web-site" id="exe-node-3"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li class="current-page-parent"><a href="contenido.html" class="current-page-parent daddy">Contenido</a>
    <ul>
-      <li id="active"><a href="pregunta_clave.html" class="active no-ch">Pregunta clave</a></li>
+      <li id="active"><a href="qu_es_un_evento.html" class="active no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li><a href="observaciones.html" class="no-ch">Observaciones</a></li>
@@ -46,20 +47,19 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="contenido.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="observaciones.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="contenido.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="qu_es_un_controlador.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Pregunta clave</h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">¿Qué es un evento?</h1></header>
 <article class="iDevice_wrapper textIdevice em_iDevice" id="id6">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle"> ¿Miramos en el Modelo de Dominio o en el Modelo de diseño para analizar las clases que tienen la información necesaria?</h1></header>
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle"> </h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta6_120_2" class="block iDevice_content">
-<div class="exe-text"><p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Si hay clases relevantes en el modelo de Diseño, mire ahí primero.</span></p>
-<p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Si no, mire en el Modelo de Dominio, e intente utilizar (o ampliar) sus representaciones para inspirar la creación de las correspondientes clases de diseño.</span></p></div>
+<div class="exe-text"><p><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Un Evento del sistema de entrada es un evento generado por un actor externo. Se asocian con operaciones del sistema, tal como se relacionan los mensajes y los métodos.</span></p></div>
 </div>
 </div>
 </div>
@@ -72,7 +72,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="contenido.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="observaciones.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="contenido.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="qu_es_un_controlador.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
