--- a/contraindicaciones.html
+++ b/contraindicaciones.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Contraindicaciones | Patrones GRASP: Experto </title>
+<title>Contraindicaciones | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,13 +19,14 @@
 <body class="exe-web-site" id="exe-node-14"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li><a href="contenido.html" class="daddy">Contenido</a>
    <ul class="other-section">
-      <li><a href="pregunta_clave.html" class="no-ch">Pregunta clave</a></li>
+      <li><a href="qu_es_un_evento.html" class="no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li><a href="observaciones.html" class="no-ch">Observaciones</a></li>
@@ -59,7 +60,9 @@
 <div class="iDevice_content_wrapper">
 <div id="ta12_126_2" class="block iDevice_content">
 <div class="exe-text"><ul>
-<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">En algunas ocasiones la solución que sugiere el Experto no es deseable, normalmente debido a problemas de acoplamiento y cohesión. <strong>¿Y qué hago?,</strong> Para mantener el bajo acoplamiento es común el uso de clases extras como controladores que sean el experto aliviando la carga.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Cuando hay muchos eventos del sistema y un solo controlador (fachada).</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Que el mismo controlador realice muchas tareas.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Que el controlador tenga muchos atributos y conserve información sobre el sistema o el dominio.</span></li>
 </ul></div>
 </div>
 </div>
