--- a/descargables.html
+++ b/descargables.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Descargables | Patrones GRASP: Experto </title>
+<title>Descargables | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -20,13 +20,14 @@
 <body class="exe-web-site" id="exe-node-17"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li><a href="contenido.html" class="daddy">Contenido</a>
    <ul class="other-section">
-      <li><a href="pregunta_clave.html" class="no-ch">Pregunta clave</a></li>
+      <li><a href="qu_es_un_evento.html" class="no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li><a href="observaciones.html" class="no-ch">Observaciones</a></li>
@@ -53,21 +54,21 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Descargables</h1></header>
-<article class="iDevice_wrapper download-packageIdevice em_iDevice" id="id21">
+<article class="iDevice_wrapper download-packageIdevice em_iDevice" id="id19">
 <div class="iDevice emphasis1">
 <header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Descargar el fichero fuente</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
-<div class="block iDevice_content" id="ta21_114_2">
+<div class="block iDevice_content" id="ta19_133_2">
 <div class="exe-download-package-instructions"><table class="exe-table"><caption>Información general sobre este recurso educativo</caption>
 <tbody>
 <tr>
 <th>Título</th>
-<td>Patrones GRASP: Experto</td>
+<td>Patrones GRASP: Controlador</td>
 </tr>
 <tr>
 <th>Descripción</th>
-<td>Objeto de aprendizaje con el objetivo de impartir conocimientos acerca del patrón Experto.</td>
+<td>Objeto de aprendizaje con el objetivo de impartir conocimientos acerca del patrón Controlador.</td>
 </tr>
 <tr>
 <th>Autor</th>
@@ -79,9 +80,24 @@
 </tr>
 </tbody>
 </table>
-<p style="text-align: center;">Este contenido fue creado con <a href="http://exelearning.net/">eXeLearning</a>, el editor libre y de fuente abierta diseñado para crear recursos educativos.</p></div><p class="exe-download-package-link"><a href="Experto.elp">Descargar el fichero .elp</a></p>
+<p style="text-align: center;">Este contenido fue creado con <a href="http://exelearning.net/">eXeLearning</a>, el editor libre y de fuente abierta diseñado para crear recursos educativos.</p></div><p class="exe-download-package-link"><a href="Controlador.elp">Descargar el fichero .elp</a></p>
 </div>
 </div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper FileAttachIdeviceInc em_iDevice em_iDevice_assignment" id="id20">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Ficheros adjuntos</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta20_82" class="block iDevice_content">
+
+</div>
+<ul class='exeFileList'><li><a href='Ejemplo.rar' target='_blank'>Archivo que contiene los diagramas de clases usados en el ejemplo<span> (Ventana nueva)</span></a></li>
+<li><a href='Actividad 1.rar' target='_blank'>Archivo que contiene los diagramas de clases usados en la actividad 1<span> (Ventana nueva)</span></a></li>
+<li><a href='Actividad 2.rar' target='_blank'>Archivo que contiene los diagramas de clases usados en la actividad 2<span> (Ventana nueva)</span></a></li>
+</ul></div>
 </div>
 </div>
 </article>
