--- a/observaciones.html
+++ b/observaciones.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Observaciones | Patrones GRASP: Experto </title>
+<title>Observaciones | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,13 +19,14 @@
 <body class="exe-web-site" id="exe-node-2"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li><a href="contenido.html" class="daddy">Contenido</a>
    <ul class="other-section">
-      <li><a href="pregunta_clave.html" class="no-ch">Pregunta clave</a></li>
+      <li><a href="qu_es_un_evento.html" class="no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li id="active"><a href="observaciones.html" class="active no-ch">Observaciones</a></li>
@@ -46,7 +47,7 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="pregunta_clave.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="discusin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="qu_es_un_controlador.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="discusin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -59,7 +60,9 @@
 <div class="iDevice_content_wrapper">
 <div id="ta9_123_2" class="block iDevice_content">
 <div class="exe-text"><ul>
-<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Se usa frecuentemente para asignar responsabilidades.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">A menudo, es conveniente utilizar la misma clase controlador para todos los eventos del sistema de un caso de uso, para que sea posible mantener la información acerca del estado del caso de uso en el controlador. </span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Un error típico del diseño de los controladores es otorgarles demasiada responsabilidad.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Normalmente, un controlador debería delegar en otros objetos el trabajo que se necesita hacer; coordina o controla la actividad. No realiza mucho trabajo por sí mismo.</span></li>
 </ul></div>
 </div>
 </div>
@@ -73,7 +76,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="pregunta_clave.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="discusin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="qu_es_un_controlador.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="discusin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
