--- a/patrones_relacionados.html
+++ b/patrones_relacionados.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Patrones relacionados | Patrones GRASP: Experto </title>
+<title>Patrones relacionados | Patrones GRASP: Controlador </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Marrugo Cantillo, Elio; Monroy Ríos, Martin" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,13 +19,14 @@
 <body class="exe-web-site" id="exe-node-11"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Patrones GRASP: Experto</div></header>
+<header id="header" ><div id="headerContent">Patrones GRASP: Controlador</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Experto</a></li>
+   <li><a href="index.html" class="daddy main-node">Patrones GRASP: Controlador</a></li>
    <li><a href="contenido.html" class="daddy">Contenido</a>
    <ul class="other-section">
-      <li><a href="pregunta_clave.html" class="no-ch">Pregunta clave</a></li>
+      <li><a href="qu_es_un_evento.html" class="no-ch">¿Qué es un evento?</a></li>
+      <li><a href="qu_es_un_controlador.html" class="no-ch">¿Qué es un Controlador?</a></li>
    </ul>
    </li>
    <li><a href="observaciones.html" class="no-ch">Observaciones</a></li>
@@ -54,13 +55,15 @@
 <header id="nodeDecoration"><h1 id="nodeTitle">Patrones relacionados</h1></header>
 <article class="iDevice_wrapper textIdevice em_iDevice" id="id13">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">El patrón Experto se relaciona con los siguientes patrones: </h1></header>
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">El patrón Controlador se relaciona con los siguientes patrones: </h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta13_127_2" class="block iDevice_content">
 <div class="exe-text"><ul>
-<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Bajo Acoplamiento.</span></li>
-<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Alta Cohesión.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Command.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Facade.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Fabricación pura.</span></li>
+<li><span style="font-size: 14pt; font-family: helvetica, arial, sans-serif;">Capas.</span></li>
 </ul></div>
 </div>
 </div>
